force-app/main/default/objects/ContactBulk__c/ContactBulk__c.object-meta.xml
<CustomObject>
    <description
  >CSV import staging. Process one file at a time with one row per Phone.</description>
    <label>Contact Bulk</label>
    <nameField>
        <displayFormat>CB-{000000}</displayFormat>
        <label>Import Row</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Bulk Imports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>