force-app/main/default/objects/ContactBulk__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>Applicant First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>