force-app/main/default/objects/ContactBulk__c/fields/ImportBatch__c.field-meta.xml
<CustomField>
    <fullName>ImportBatch__c</fullName>
    <label>Import Batch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>