force-app/main/default/objects/ContactBulk__c/fields/MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>MailingPostalCode__c</fullName>
    <label>Mailing Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>