force-app/main/default/objects/ContactBulk__c/fields/MonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIncome__c</fullName>
    <label>Monthly Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>