force-app/main/default/objects/ContactBulk__c/fields/SupportOptionRaw__c.field-meta.xml
<CustomField>
    <fullName>SupportOptionRaw__c</fullName>
    <label>Support Option Raw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>