force-app/main/default/objects/ContactBulk__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contact__c</columns>
    <columns>SupportOptionRaw__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Phone__c</columns>
    <columns>ProcessedAt__c</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Imports</label>
</ListView>