force-app/main/default/objects/ContactBulk__c/listViews/Not_Failed_Imports.listView-meta.xml
<ListView>
    <fullName>Not_Failed_Imports</fullName>
    <columns>Contact__c</columns>
    <columns>SupportOptionRaw__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Phone__c</columns>
    <columns>ProcessedAt__c</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Failed</value>
    </filters>
    <label>Not Failed Imports</label>
</ListView>